# rag-helper

./: .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml
archive/: async_retriever.py  retriever.py  upload_to_vector_store.py  vector_store.py
data/chunks/docling/: 2025.emnlp-main.1062.json  2025.icnlsp-1.15.json  2507.18910v1.json  2507.21110v1.json  NIPS-2017-attention-is-all-you-need-Paper.json
data/extracted/docling/: 2025.icnlsp-1.15.json  NIPS-2017-attention-is-all-you-need-Paper.json  NIPS-2017-attention-is-all-you-need-Paper.md
data/processed/docling/: 2025.emnlp-main.1062.json  2025.icnlsp-1.15.json  2507.18910v1.json  2507.21110v1.json  NIPS-2017-attention-is-all-you-need-Paper.json
dev/: retrieval.ipynb  retrieval_and_generation.ipynb
src/: rag_main.py  rag_pipeline.py
src/generation/: generator.py
src/ingestion/: ingest.py
src/offline_components/: ingest.py
src/offline_components/utils/: chunkers.py  data_extractors.py  data_loaders.py  data_processors.py  upload_to_vector_store.py
src/online_components/: generator.py  reranker.py  retriever.py
src/online_components/utils/: guardrails.py  llm.py  memory.py
src/prompts/: v1_prompt.py
src/retrieval/: reranker.py  retriever.py
src/utils/: base.py  prompt.py  schemas.py  vector_store.py
tests/: llm_smoke_test.py
